removed overflow issue added height and width value to body

--- a/css/skills.css
+++ b/css/skills.css
@@ -8,7 +8,9 @@
   }
 
   body {
-    overflow: hidden;
+    /* overflow: hidden; */
+    height: 100vh;
+    width: 100%;
     background-color:rgb(228, 217, 217) ;
 }
 
